Keep Picture-in-Picture window size in sync with video size.

This makes sure Picture-in-Picture window always shows up inside the
work area when surface ID is updated.

Bug: 873657
Change-Id: Ibc9a640d527f51e5311a411b86af23eb61617f37
Reviewed-on: https://chromium-review.googlesource.com/1196363
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Cr-Original-Commit-Position: refs/heads/master@{#588130}(cherry picked from commit e39777dd7f91cf27f6295e866504b105525fcbb5 [formerly cef06981ddddf998678accb950a697cbf08ddbbe])
Reviewed-on: https://chromium-review.googlesource.com/1212844
Reviewed-by: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/branch-heads/3538@{#127}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 190e606fab0d5bca4ed02e5b96d8357012862292